# haskell-opengl-charting

./: README.md  Setup.hs  haskell-opengl-charting.cabal  stack.yaml
app/: Axis.hs  BulkVerticesData.hs  Chart.hs  Gear.hs  Main.hs  TestDrawable.hs  TestGLFW.hs
app/learn-arcan/: .gitignore  1-arcan-eglintro.c  2-arcan-eglintro.c  3-arcan-eglintro.c  4-arcan-eglintro.c  Makefile  config.mk  connect.c  eglintro.c
app/learn-arcan/demo/: demo.lua  notes
app/learn-arcan/notes/: #arcan-2016-10-07.txt  #arcan-2016-10-08.txt  #arcan-2016-10-09.txt  #arcan-2016-10-10.txt  #arcan-2016-10-11.txt  letoram-2016-10-07.txt  letoram-2016-10-08.txt  letoram-2016-10-10.txt  letoram-2016-10-11.txt
src/: Drawable.hs  Frame.hs  GLException.hs  GLFWHelpers.hs  HorizontalCrosshair.hs  Lib.hs  OpenGLHelpers.hs  PriceAreaGraph.hs  PriceData.hs  Scale.hs  Screen.hs  TestData.hs  Types.hs  VerticalCrosshair.hs  VolumeBarGraph.hs
src/Drawable/: Frame.hs  HorizontalCrosshair.hs  PriceAreaGraph.hs  Screen.hs  VerticalCrosshair.hs  VolumeBarGraph.hs
src/Drawable/Graph/: Area.hs
src/Drawables/: Frame.hs  HorizontalCrosshair.hs  PriceAreaGraph.hs  VerticalCrosshair.hs
test/: Spec.hs
