name:                haskell-opengl-charting
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-opengl-charting#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Scale
                     , GLException
                     , GLFWHelpers
                     , OpenGLHelpers
                     , Drawable
                     , Drawable.PriceAreaGraph
                     , Drawable.VolumeBarGraph
                     , Drawable.Screen
                     , Drawable.Frame
                     , Drawable.VerticalCrosshair
                     , Drawable.HorizontalCrosshair
                     , TestData
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , tuple
                     , stm
                     , safe-exceptions
                     , transformers
                     , GLFW-b
                     , quine
                     , pretty
                     , mtl
                     , bytestring
                     , colour
                     , gl
                     , linear
                     , time
                     , random
  default-language:    Haskell2010

-- executable baby-steps-to-building-a-realtime-chart-with-haskell-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , baby-steps-to-building-a-realtime-chart-with-haskell
--   default-language:    Haskell2010

executable Chart
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  other-modules: Types
               , Scale
               , GLException
               , GLFWHelpers
               , OpenGLHelpers
               , Drawable
               , PriceAreaGraph
               , VolumeBarGraph
               , Screen
               , Frame
               , VerticalCrosshair
               , HorizontalCrosshair
               , Chart
               , TestData
               , BulkVerticesData
--                      , AxisOpenGL
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-B
  build-depends:       base
                     , haskell-opengl-charting
                     , groom
                     , safe
                     , mtl
                     , linear
                     , colour
                     , async
                     , containers
                     , random
                     , vector
                     , bytestring
                     , gl
                     , safe-exceptions
                     , GLFW-b
                     , bindings-GLFW >= 3.2.1.0
                     , quine
                     , transformers
                     , colour
                     , stm
                     , pretty
                     , tuple
                     , time
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable TestDrawable
  hs-source-dirs:      app
                     , src
  main-is:             TestDrawable.hs
  other-modules: Types
               , Scale
               , GLException
               , GLFWHelpers
               , OpenGLHelpers
               , Drawable
               , PriceAreaGraph
               , VolumeBarGraph
               , Screen
               , Frame
               , VerticalCrosshair
               , HorizontalCrosshair
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-B
  build-depends:       base
                     , haskell-opengl-charting
                     , groom
                     , safe
                     , mtl
                     , linear
                     , colour
                     , async
                     , containers
                     , random
                     , vector
                     , bytestring
                     , gl
                     , safe-exceptions
                     , GLFW-b
                     , bindings-GLFW >= 3.2.1.0
                     , quine
                     , transformers
                     , colour
                     , stm
                     , pretty
                     , tuple
                     , time
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

-- this is the GLFW-b-demo/src/Main.hs
executable TestGLFW
  hs-source-dirs:      app
  main-is:             TestGLFW.hs
  other-modules:       Gear
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-B
  build-depends:       base
                     , GLFW-b
                     , OpenGL
                     , transformers
                     , mtl
                     , stm
                     , pretty
                     , bindings-GLFW >= 3.2.1.0
  default-language:    Haskell2010

-- test-suite baby-steps-to-building-a-realtime-chart-with-haskell-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , baby-steps-to-building-a-realtime-chart-with-haskell
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-opengl-charting
